<resources>
    <string name="app_name">AMOVIA</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="detail">Detail</string>

    <string name="title">%s (%s)</string>
    <string name="img_poster">image poster</string>
    <string name="release">Dec 12, 2021</string>
    <string name="number">9</string>
    <string name="rating_count">(%s)</string>
    <string name="duration">Duration: %s</string>
    <string name="overview">Overview</string>
</resources>